--- a/pom.xml
+++ b/pom.xml
@@ -68,19 +68,27 @@
     
     
   </dependencies>
+
   <build>
     <finalName>sispca2</finalName>
     
-     <plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-      </plugins>
-    
+     <pluginManagement>
+	     <plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+				 <plugin>
+			        <groupId>org.sonarsource.scanner.maven</groupId>
+			        <artifactId>sonar-maven-plugin</artifactId>
+			        <version>3.4.0.905</version>
+			     </plugin>
+				
+	      </plugins>
+    </pluginManagement>
   </build>
 </project>
