--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,15 @@
 			<version>1.3.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>6.5.1</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
