--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
 		    <version>6.5.1</version>
 		</dependency>
  
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.3</version>
+		</dependency>
+ 
+ 
  
 	</dependencies>
 
