--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,5 +35,16 @@
 		<filter-name>PrimeFaces FileUpload Filter</filter-name>
 		<servlet-name>Faces Servlet</servlet-name>
 	</filter-mapping>
+	
+<!-- 	<filter> -->
+<!-- 		<filter-name>SispcaFilter</filter-name> -->
+<!-- 		<filter-class>arquitetura.filter.SispcaFilter</filter-class> -->
+<!-- 	</filter>	  -->
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>SispcaFilter</filter-name> -->
+<!-- 		<url-pattern>*.xhtml</url-pattern> -->
+<!-- 	</filter-mapping> -->
+	
+	
 
 </web-app>
