--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,13 @@
 		    <artifactId>jasperreports</artifactId>
 		    <version>6.5.1</version>
 		</dependency>
+
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-fonts</artifactId>
+		    <version>6.0.0</version>
+		</dependency>
+	 
  
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
 		<dependency>
