--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,14 @@
 			<version>1.3.1</version>
 			 
 		</dependency>
+  
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.3</version>
+		</dependency>
  
-		 <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+ <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports</artifactId>
@@ -106,16 +112,20 @@
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports-fonts</artifactId>
 		    <version>6.0.0</version>
-		</dependency>
-	 
- 
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+		</dependency>	 
+
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-text</artifactId>
-		    <version>1.3</version>
+		    <groupId>org.jfree</groupId>
+		    <artifactId>jfreechart</artifactId>
+		    <version>1.0.19</version>
 		</dependency>
- 
+
+
+		<dependency>
+		    <groupId>org.jfree</groupId>
+		    <artifactId>jcommon</artifactId>
+		    <version>1.0.24</version>
+		</dependency>
  
  
 	</dependencies>
