--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,23 +27,21 @@
 		<param-value>bootstrap</param-value>
 	</context-param>
 
-	<filter>
-		<filter-name>PrimeFaces FileUpload Filter</filter-name>
-		<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>PrimeFaces FileUpload Filter</filter-name>
-		<servlet-name>Faces Servlet</servlet-name>
-	</filter-mapping>
-	
-<!-- 	<filter> -->
-<!-- 		<filter-name>SispcaFilter</filter-name> -->
-<!-- 		<filter-class>arquitetura.filter.SispcaFilter</filter-class> -->
-<!-- 	</filter>	  -->
-<!-- 	<filter-mapping> -->
-<!-- 		<filter-name>SispcaFilter</filter-name> -->
-<!-- 		<url-pattern>*.xhtml</url-pattern> -->
-<!-- 	</filter-mapping> -->
+	 <context-param>
+	  <description>State saving method: 'client' or 'server' (=default). See JSF Specification 2.5.2</description>
+	  <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+	  <param-value>server</param-value>
+	 </context-param>
+
+	   <filter>
+		  <filter-name>PrimeFaces FileUpload Filter</filter-name>
+		  <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+	  </filter>
+	  <filter-mapping>
+		  <filter-name>PrimeFaces FileUpload Filter</filter-name>
+		  <servlet-name>Faces Servlet</servlet-name>
+	  </filter-mapping>
+	 
 	
 	
 
