--- a/pom.xml
+++ b/pom.xml
@@ -120,16 +120,19 @@
 		    <artifactId>jfreechart</artifactId>
 		    <version>1.0.19</version>
 		</dependency>
-
-
-
-
+ 
 		<dependency>
 		    <groupId>org.jfree</groupId>
 		    <artifactId>jcommon</artifactId>
 		    <version>1.0.24</version>
 		</dependency>
- 
+
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.17</version>
+		</dependency>
+		 
  
 	</dependencies>
 
