--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,10 @@
 		<welcome-file>public/login.xhtml</welcome-file>
 	</welcome-file-list>
 
-
-
+	<servlet>
+		<servlet-name>errorServlet</servlet-name>
+		<servlet-class>arquitetura.servlet.ErrorHttpServlet</servlet-class>
+	</servlet>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -27,22 +29,51 @@
 		<param-value>bootstrap</param-value>
 	</context-param>
 
-	 <context-param>
-	  <description>State saving method: 'client' or 'server' (=default). See JSF Specification 2.5.2</description>
-	  <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-	  <param-value>server</param-value>
-	 </context-param>
+	<context-param>
+		<description>State saving method: 'client' or 'server' (=default). See
+			JSF Specification 2.5.2</description>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>server</param-value>
+	</context-param>
 
-	   <filter>
-		  <filter-name>PrimeFaces FileUpload Filter</filter-name>
-		  <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
-	  </filter>
-	  <filter-mapping>
-		  <filter-name>PrimeFaces FileUpload Filter</filter-name>
-		  <servlet-name>Faces Servlet</servlet-name>
-	  </filter-mapping>
-	 
-	
-	
+	<filter>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
+
+	<servlet-mapping>
+		<servlet-name>errorServlet</servlet-name>
+		<url-pattern>/errorServlet</url-pattern>
+	</servlet-mapping>
+	<session-config>
+		<session-timeout>180</session-timeout>
+	</session-config>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/errorServlet</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/errorServlet</location>
+	</error-page>
+	<error-page>
+		<exception-type>javax.servlet.ServletException</exception-type>
+		<location>/errorServlet</location>
+	</error-page>
+
+	<error-page>
+		<exception-type>java.io.IOException</exception-type>
+		<location>/errorServlet</location>
+	</error-page>
+	<error-page>
+		<exception-type>java.lang.Exception</exception-type>
+		<location>/errorServlet</location>
+	</error-page>
+
 
 </web-app>
