--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
 		    <artifactId>commons-text</artifactId>
 		    <version>1.3</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.3</version>
+		</dependency>		
+		
  
  <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
 		<dependency>
@@ -133,6 +140,18 @@
 		    <version>3.17</version>
 		</dependency>
 		 
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>c3p0</groupId>
+					<artifactId>c3p0</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency> 
+ 
  
 	</dependencies>
 
